--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "budo ./app/index.js:./web/js/bundle.js -- -t [ babelify --presets [ react es2015 ] ] -t glslify",
+    "build": "browserify app/index.js -t [ babelify --presets [ react es2015 ] ] -t glslify -o web/js/bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jean-Pierre Sierens",
@@ -18,12 +20,19 @@
     "gulp-streamify": "1.0.2",
     "gulp-uglify": "1.5.1",
     "gulp-util": "3.0.7",
+    "uglifyjs": "^2.4.10",
     "vinyl-source-stream": "1.1.0"
   },
   "dependencies": {
+    "a-big-triangle": "^1.0.2",
+    "babel-plugin-glslify": "^1.0.2",
     "coloreact": "^0.1.9",
+    "gl-shader": "^4.2.1",
+    "glslify": "^6.0.0",
+    "raf-loop": "^1.1.3",
     "react": "0.14.5",
     "react-dom": "0.14.5",
-    "react-dropzone": "^3.6.0"
+    "react-dropzone": "^3.6.0",
+    "webgl-context": "^2.2.0"
   }
 }
