--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "budo ./app/index.js:./web/js/bundle.js -- -t [ babelify --presets [ react es2015 ] ] -t glslify",
-    "build": "browserify app/index.js -t [ babelify --presets [ react es2015 ] ] -t glslify -o web/js/bundle.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm run live & npm run dev",
+    "build": "browserify app/index.js -t [ babelify --presets [ react es2015 ] ]  -t glslify -o web/js/bundle.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "live": "glslify-live",
+    "dev": "budo app/index.js:web/js/bundle.js --live -- -t [ babelify --presets [ react es2015 ] ] -t glslify"
   },
   "author": "Jean-Pierre Sierens",
   "license": "ISC",
@@ -15,6 +17,10 @@
     "babel-preset-react": "6.3.13",
     "babelify": "7.2.0",
     "browserify": "12.0.1",
+    "bulkify": "^1.4.2",
+    "glslify-hex": "^2.1.1",
+    "glslify-import": "^3.0.0",
+    "glslify-live": "^2.1.1",
     "gulp": "3.9.0",
     "gulp-if": "2.0.0",
     "gulp-streamify": "1.0.2",
@@ -28,11 +34,18 @@
     "babel-plugin-glslify": "^1.0.2",
     "coloreact": "^0.1.9",
     "gl-shader": "^4.2.1",
+    "glsl-sdf-primitives": "0.0.1",
     "glslify": "^6.0.0",
     "raf-loop": "^1.1.3",
     "react": "0.14.5",
     "react-dom": "0.14.5",
     "react-dropzone": "^3.6.0",
     "webgl-context": "^2.2.0"
+  },
+  "glslify": {
+    "transform": [
+      "glslify-hex",
+      "glslify-import"
+    ]
   }
 }
