--- a/package.json
+++ b/package.json
@@ -33,13 +33,19 @@
     "a-big-triangle": "^1.0.2",
     "babel-plugin-glslify": "^1.0.2",
     "coloreact": "^0.1.9",
+    "file-saver": "^1.3.3",
     "gl-shader": "^4.2.1",
+    "glsl-editor": "^1.0.0",
     "glsl-sdf-primitives": "0.0.1",
     "glslify": "^6.0.0",
     "raf-loop": "^1.1.3",
+    "rc-color-picker": "^1.1.0",
     "react": "0.14.5",
+    "react-color": "^2.3.3",
+    "react-color-picker": "^4.0.2",
     "react-dom": "0.14.5",
     "react-dropzone": "^3.6.0",
+    "reactcss": "^1.0.9",
     "webgl-context": "^2.2.0"
   },
   "glslify": {
